<resources>
    <string name="app_name">hamburguerNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">INFNET</string>
    <string name="nav_header_subtitle">gustavo.bsilva@al.infnet.edu.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Informações Pessoais</string>
    <string name="menu_gallery">Formação</string>
    <string name="menu_slideshow">Experiência Profissional</string>
    <string name="menu_curso">Cursos</string>
    <string name="menu_publicacoes">Publicações</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>