<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_assured_workload_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_business_center_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/cursosFrag"
            android:icon="@drawable/ic_baseline_cursos"
            android:title="@string/menu_curso" />
        <item
            android:id="@+id/publiFrag"
            android:icon="@drawable/ic_baseline_article_24"
            android:title="@string/menu_publicacoes" />

    </group>
</menu>