<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hamburguernav.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.hamburguernav.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.hamburguernav.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/cursosFrag"
        android:name="com.example.hamburguernav.ui.curso.cursosFrag"
        android:label="@string/menu_curso"
        tools:layout="@layout/fragment_cursos" />
    <fragment
        android:id="@+id/publiFrag"
        android:name="com.example.hamburguernav.ui.publicacoes.PubliFrag"
        android:label="@string/menu_publicacoes"
        tools:layout="@layout/fragment_publi" />
</navigation>